# onsen_tabi

./: Cargo.toml  Dockerfile  README.md  rust-toolchain  startup.sh
.github/workflows/: rust.yml
migrations/2023-07-29-015730_create_hotel/: down.sql  up.sql
migrations/2023-07-29-015734_create_onsen/: down.sql  up.sql
migrations/2023-08-07-123223_update_nullable/: down.sql  up.sql
migrations/2023-08-09-105756_create_area/: down.sql  up.sql
migrations/2023-08-11-113837_create_prefecture/: down.sql  up.sql
migrations/2023-08-13-020223_create_onsen_description/: down.sql  up.sql
migrations/2023-08-15-100105_add_url/: down.sql  up.sql
migrations/2023-08-18-233957_create_user/: up.sql
migrations/2023-08-20-224034_delete_salt_column/: down.sql  up.sql
migrations/2023-08-24-231138_add_description_column/: down.sql  up.sql
migrations/2023-09-02-084319_add_day_use_column/: down.sql  up.sql
migrations/2023-09-02-120550_update_area/: down.sql  up.sql
migrations/2023-09-13-105206_create_chemicals/: down.sql  up.sql
migrations/2024-02-24-170758_non_null_is_day_use/: down.sql  up.sql
migrations/2024-02-26-125320_add_temperature/: down.sql  up.sql
migrations/2024-02-28-102706_create_onsen_img_url/: down.sql  up.sql
migrations/2024-03-07-145307_update_chemicals_order/: down.sql  up.sql
migrations/2024-03-08-070833_add_quality_chemicals/: down.sql  up.sql
migrations/2024-03-26-153317_add_fe_option/: down.sql  up.sql
migrations/2024-03-28-231816_add_solo_available/: down.sql  up.sql
migrations/2024-04-09-224053_add_access_to_area/: down.sql  up.sql
migrations/2024-06-30-070347_add_kana_to_area/: down.sql  (+1 more)
scripts/: start.sh
src/: application.rs  domain.rs  infrastructure.rs  main.rs  schema.rs
(+62 files in other folders)
