[package]
name = "onsen_tabi"
version = "0.0.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.0", features = ["mysql"] }
dotenvy = "0.15"
rocket = "0.4.11"
rocket_contrib = { version = "0.4.11", features = ["json"] }
rocket_cors = "0.5.2"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25"
jwt = "0.16.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.3"
features = ["handlebars", "tera"]
