[package]
name = "onsen_tabi"
version = "0.0.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1", features = ["mysql"] }
dotenvy = "0.15"
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6"
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars", "tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
jsonwebtoken = "9"
rust-argon2 = "2.1"
rand = "0.8"
chrono = "0.4"
